--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -85,7 +85,6 @@
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(63.68% 0 0);
   --secondary-foreground: oklch(0 0 0);
-  /* --secondary2: oklch(67.97% 0.0000 0); */
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
@@ -94,7 +93,6 @@
   --destructive-foreground: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(86.99% 0 0);
-  /* --placeholder: oklch(67.97% 0.0000 0); */
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
@@ -113,8 +111,16 @@
 
 @layer components {
   .layout-area {
-    @apply w-full min-w-94 max-w-280 px-4 sm:px-6 m-auto;
+    @apply w-full min-w-90 max-w-6xl px-4 sm:px-6 mx-auto;
   }
+
+  .link {
+    @apply text-primary underline;
+  }
+}
+
+@utility text-price {
+  @apply font-normal md:font-bold before:content-['$'];
 }
 
 @utility font-base {
