--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bellota+Text:ital@1&display=swap");
 
+@config "../../../tailwind.config.js";
 @import "tailwindcss";
 @import "tw-animate-css";
 
